Revert r16010 and r16011. They broke the build on Cygwin, by introducing circular linkage between libsvn_ra and libsvn_ra_{local,dav,svn}.
* build.conf
* subversion/libsvn_ra/wrapper_template.h
* subversion/libsvn_ra/ra_loader.c
* subversion/include/svn_ra.h
* subversion/libsvn_ra_dav/session.c


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@856091 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.conf
+++ b/build.conf
@@ -259,8 +259,8 @@ type = exe
 path = subversion/svnserve
 install = bin
 manpages = subversion/svnserve/svnserve.8 subversion/svnserve/svnserve.conf.5
-libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr 
-       libsvn_ra libsvn_ra_svn aprutil apriconv apr
+libs = libsvn_repos libsvn_fs libsvn_delta libsvn_subr libsvn_ra_svn
+       aprutil apriconv apr
 
 [svnversion]
 description = Subversion Revision Extractor
