--- a/subversion/bindings/swig/perl/native/Makefile.PL.in
+++ b/subversion/bindings/swig/perl/native/Makefile.PL.in
@@ -36,9 +36,6 @@ my $apr_ldflags = '@SVN_APR_EXPORT_LIBS@'
 
 chomp $apr_shlib_path_var;
 
-my $lddlflags = $Config{lddlflags};
-$lddlflags =~ s,(^| )-L/usr/local/lib( |$),,g;
-
 my %config = (
     ABSTRACT => 'Perl bindings for Subversion',
     INC  => join(' ',$apr_cflags, $apu_cflags, 
@@ -46,13 +43,11 @@ my %config = (
                  " -I$svnlib_srcdir/include",
                  " -I$swig_srcdir -g"),
     OBJECT => q/$(O_FILES)/,
-    LIBS => [join(' ', 
+    LIBS => [join(' ', $apr_ldflags,
                   (map {$_ = abs_path($_); "-L$_"} @ldpaths),
                   @ldmodules, '-lsvn_swig_perl-1',
-                  $apr_ldflags,
                   `$swig -perl -ldflags`)],
-    test => { TESTS => "$swig_srcdir/perl/native/t/*.t" },
-    LDDLFLAGS => $lddlflags
+    test => { TESTS => "$swig_srcdir/perl/native/t/*.t" }
 );
 
 sub perlish {
