--- a/Makefile.in
+++ b/Makefile.in
@@ -30,7 +30,7 @@ SVN_FS_LIB_DEPS = @SVN_FS_LIB_DEPS@
 SVN_FS_LIB_INSTALL_DEPS = @SVN_FS_LIB_INSTALL_DEPS@
 SVN_FS_LIB_LINK = @SVN_FS_LIB_LINK@
 
-DOC_DIRS = doc/programmer/design doc/misc-docs
+DOC_DIRS = doc/misc-docs doc/design
 
 SWIG_SRC_DIR = $(abs_srcdir)/subversion/bindings/swig
 SWIG_BUILD_DIR = $(abs_builddir)/subversion/bindings/swig
@@ -57,7 +57,6 @@ bindir = @bindir@
 includedir = @includedir@
 mandir = @mandir@
 srcdir = @srcdir@
-infodir = @infodir@
 datadir = @datadir@
 localedir = @localedir@
 
@@ -76,11 +75,6 @@ javahl_javadir = @libdir@/svn-javahl
 javahl_javahdir = @libdir@/svn-javahl/include
 javahl_libdir = @libdir@
 
-### should search for these...
-MAKEINFO = @MAKEINFO@
-TEXI2DVI = texi2dvi
-DVIPS = dvips
-DVIPDF = dvipdf
 MSGFMT = @MSGFMT@
 MSGFMTFLAGS = @MSGFMTFLAGS@
 MSGMERGE = @MSGMERGE@
@@ -481,42 +475,33 @@ doc-api:
 
 # Build all types of a certain doc.
 doc-misc-docs: doc-misc-docs-html doc-misc-docs-pdf doc-misc-docs-ps
-doc-design: doc-design-info doc-design-html doc-design-txt
+doc-design: doc-design-html doc-design-pdf doc-design-ps
 
 # Build all docs of a certain type.
 doc-all-html: doc-design-html doc-misc-docs-html
 doc-all-pdf: doc-design-pdf doc-misc-docs-pdf
 doc-all-ps: doc-design-ps doc-misc-docs-ps
-doc-all-info: doc-design-info
 
-# Different outputs for the 'design' document, written in texinfo.
-# Assumes you have {makeinfo, texi2dvi, dvips, dvipdf} installed.
-doc-design-info: doc/programmer/design/svn-design.info
-doc-design-html: doc/programmer/design/svn-design.html
-doc-design-txt: doc/programmer/design/svn-design.txt
-doc-design-dvi: doc/programmer/design/svn-design.dvi
-doc-design-ps: doc/programmer/design/svn-design.ps
-doc-design-pdf: doc/programmer/design/svn-design.pdf
-
-# Different outputs for the misc docs.
 # Assumes you have {xsltproc, fop, stylesheets} installed.
 doc-misc-docs-html:
-	cd $(top_srcdir)/doc && $(MAKE) misc-docs-html
+	cd $(top_srcdir)/doc/misc-docs && $(MAKE) all-html
 doc-misc-docs-pdf:
-	cd $(top_srcdir)/doc && $(MAKE) misc-docs-pdf
+	cd $(top_srcdir)/doc/misc-docs && $(MAKE) pdf
 doc-misc-docs-ps:
-	cd $(top_srcdir)/doc && $(MAKE) misc-docs-ps
+	cd $(top_srcdir)/doc/misc-docs && $(MAKE) ps
+
+doc-design-html:
+	cd $(top_srcdir)/doc/design && $(MAKE) all-html
+doc-design-pdf:
+	cd $(top_srcdir)/doc/design && $(MAKE) pdf
+doc-design-ps:
+	cd $(top_srcdir)/doc/design && $(MAKE) ps
 
 
 doc-clean:
-	for d in $(DOC_DIRS);                               \
-        do                                                  \
-            (cd $$d;                                        \
-             rm -f *.info *.info-[1-9]                      \
-                   *.aux *.cp *.fn *.ky *.log *.pg *.toc    \
-                   *.tp *.vr                                \
-                   *.dvi *.txt *.html *.ps *.pdf *.fo);     \
-        done
+	cd $(top_srcdir)/doc/misc-docs && $(MAKE) clean
+	cd $(top_srcdir)/doc/design && $(MAKE) clean
+	rm -rf $(top_srcdir)/doc/doxygen
 
 # Converting from the .rnc XML shcemas to various other schema formats.
 SCHEMAS_DTD = $(SCHEMA_DIR)/blame.dtd $(SCHEMA_DIR)/info.dtd \
@@ -546,7 +531,7 @@ schema-clean:
 # Implicit rules for creating outputs from input files
 #
 .SUFFIXES:
-.SUFFIXES: .c .lo .o .la-a .la .texi .info .dvi .txt .html .ps .pdf \
+.SUFFIXES: .c .lo .o .la-a .la \
            .po .spo .mo .rnc .rng .dtd .xsd
 
 .c.o:
@@ -558,24 +543,6 @@ schema-clean:
 .la.la-a:
 	sed "/library_names/s/'.*'/''/" $< > $@
 
-
-.texi.info:
-	$(MAKEINFO) -I `dirname $<` -o $@ $< 
-
-.texi.dvi:
-	wd=`pwd` ; cd `dirname $@` ; $(TEXI2DVI) $$wd/$<
-
-.texi.txt:
-	$(MAKEINFO) -I `dirname $<` --no-headers -o $@ $<
-
-.texi.html:
-	$(MAKEINFO) -I `dirname $<` --no-split --html -o $@ $<
-
-.dvi.ps:
-	$(DVIPS) $< -o $@
-
-.dvi.pdf:
-	$(DVIPDF) $< $@
 
 # Strip the Content-Type: header from the po file if we don't have a
 # gettext that supports bind_textdomain_codeset, so it doesn't try
@@ -602,7 +569,7 @@ schema-clean:
 .rnc.xsd:
 	@TRANG@ $< $@
 
-install-docs: install-man @INSTALL_INFO@
+install-docs: install-man
 
 manroot = $(mandir)/man
 install-man:
@@ -617,17 +584,6 @@ install-man:
           inst=`echo $$inst`.$$ext;                                        \
           echo "$(INSTALL_DATA) $$file $(DESTDIR)$(manroot)$$ext/$$inst";  \
           $(INSTALL_DATA) $$file $(DESTDIR)$(manroot)$$ext/$$inst;         \
-        done
-
-install-info: doc-all-info
-	$(MKDIR) $(DESTDIR)$(infodir)
-	@list='$(INFOPAGES)';                                         \
-        for i in $$list; do                                           \
-          if test -f $(srcdir)/$$i; then file=$(srcdir)/$$i;          \
-          else file=$$i; fi;                                          \
-          inst=`echo $$file | sed -e 's/^.*\///'`;                    \
-          echo "$(INSTALL_DATA) $$file $(DESTDIR)$(infodir)/$$inst";  \
-          $(INSTALL_DATA) $$file $(DESTDIR)$(infodir)/$$inst;         \
         done
 
 clean-swig: clean-swig-py clean-swig-pl clean-swig-rb
