Add a conditional workaround for the Perl bindings' usage of circular linkage.
* configure.in: Check and #define SVN_AVOID_CIRCULAR_LINKAGE_AT_ALL_COSTS_HACK
    on Cygwin.

* subversion/bindings/swig/perl/native/Makefile.PL.in: Add an -I option so that
    svn_private_config.h is includable.

* subversion/bindings/swig/core.i [SWIGPERL]:
    Call svn_swig_pl_bind_current_pool_fns during module initialization,
    if SVN_AVOID_CIRCULAR_LINKAGE_AT_ALL_COSTS_HACK defined.

* subversion/bindings/swig/perl/libsvn_swig_perl/swigutil_pl.c:
    Include svn_private_config.h.
  (svn_swig_pl_bind_current_pool_fns): New definition, visible iff
    SVN_AVOID_CIRCULAR_LINKAGE_AT_ALL_COSTS_HACK defined.
  (svn_swig_pl_get_current_pool, svn_swig_pl_set_current_pool):
    Define differently if SVN_AVOID_CIRCULAR_LINKAGE_AT_ALL_COSTS_HACK defined.

* subversion/bindings/swig/perl/libsvn_swig_perl/swigutil_pl.h:
    Include svn_private_config.h.
  (svn_swig_pl_get_current_pool_t, svn_swig_pl_set_current_pool_t,
   svn_swig_pl_bind_current_pool_fns): Declare iff
    SVN_AVOID_CIRCULAR_LINKAGE_AT_ALL_COSTS_HACK defined


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857470 13f79535-47bb-0310-9956-ffa450edef68

--- a/subversion/bindings/swig/perl/native/Makefile.PL.in
+++ b/subversion/bindings/swig/perl/native/Makefile.PL.in
@@ -41,6 +41,7 @@ my %config = (
     INC  => join(' ',$apr_cflags, $apu_cflags, 
                  " -I$swig_srcdir/perl/libsvn_swig_perl",
                  " -I$svnlib_srcdir/include",
+                 " -I$svnlib_builddir",
                  " -I$swig_srcdir -g"),
     OBJECT => q/$(O_FILES)/,
     LIBS => [join(' ', $apr_ldflags,
