On the ra-replay-dev branch: Add a new RA layer API for replaying the exact changes that produced a given revision into an editor.  This is intended to be used for mirroring a revision into a foreign repository.
This also adds a new svnsync command that uses this API to replicate
repositories.

* build.conf
  (svnsync): New section for our new utility.

* subversion/include/svn_ra.h
  (svn_ra_replay): New prototype.

* subversion/include/svn_repos.h
  (svn_repos_replay2): New version of svn_repos_replay, lets you specify
   if you want to recieve deltas for text and property changes and adds
   the ability to limit the replay to a certain section of the repository.
  (svn_repos_replay): Deprecate.

* subversion/libsvn_ra/ra_loader.h
  (svn_ra__vtable_t): Add new replay method.

* subversion/libsvn_ra/ra_loader.c
  (svn_ra_replay): New function.

* subversion/libsvn_ra_local/ra_plugin.c
  (svn_ra_local__replay): Implementation of the replay interface for
   libsvn_ra_local.
  (ra_local_vtable): Add replay.

* subversion/libsvn_repos/replay.c
  Include svn_props.h.
  (path_driver_cb_baton): Add compare_root member, which holds the root
   for the previous revision if we're generating deltas.  Add authz func
   and baton.  Comment on the difference between the two root members.
   Add members to store the base path, base path length, and the low
   water mark for the client's historical data.
  (add_subdir): New helper function for replaying the creation of a tree
   into the editor, allows us to deal with the fact that the user might
   not have the history needed to reproduce it themselves.
  (is_within_base_path): Helper function to determine if a given path is
   within the base path we're copying history under.
  (path_driver_cb_func): Move copyfrom_path and copyfrom_rev up to the
   top level of the function so they can be used as an indication that
   an add is in fact a copy.  Send propchanges and text deltas if the
   user requested them.  Handle authorization

--- a/build.conf
+++ b/build.conf
@@ -288,6 +288,13 @@ libs = libsvn_client libsvn_subr libsvn_wc aprutil apriconv apr neon
 install = bin
 manpages = subversion/svnversion/svnversion.1
 
+[svnsync]
+description = Subversion repository replicator
+type = exe
+path = subversion/svnsync
+libs = libsvn_client libsvn_ra libsvn_delta libsvn_subr apr
+install = bin
+
 # ----------------------------------------------------------------------------
 #
 # TARGETS FOR I18N SUPPORT
