* Makefile.in   (svncheck, svncheck6): Use ./subversion/svnserve/svnserve in the example    command lines for setting up svnserve for the tests, so you can actually    cut and paste them into a shell.
git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857555 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -390,12 +390,12 @@ davautocheck:
 	@APXS=$(APXS) sh $(top_srcdir)/subversion/tests/clients/cmdline/davautocheck.sh
 
 # First, run:
-#   subversion/svnserve/svnserve -d -r `pwd`/subversion/tests/clients/cmdline
+#   ./subversion/svnserve/svnserve -d -r `pwd`/subversion/tests/clients/cmdline
 svncheck: 
 	@$(MAKE) check BASE_URL=svn://localhost
 
 # First, run:
-#   subversion/svnserve/svnserve --listen-host "::1" -d -r `pwd`/subversion/tests/clients/cmdline
+#   ./subversion/svnserve/svnserve --listen-host "::1" -d -r `pwd`/subversion/tests/clients/cmdline
 
 svncheck6: 
 	@$(MAKE) check BASE_URL=svn://\[::1\]
