On the ra-replay-dev branch: Begin setting up plumbing to use when hooking in tests for SVNSync.
* Makefile.in
  (TESTS): Change TEST_PROGRAMS to SVN_TEST_PROGRAMS, and document.

  (svnsynccheck): Add new build target for testing svnsync.


* build/generator/gen_make.py
  (Generator.write): Change TEST_PROGRAMS to SVN_TEST_PROGRAMS to be
   more explicit that the tests are for the 'svn' command-line client.
   Add output of a SVNSYNC_TEST_PROGRAMS Makefile variable, currently
   empty.  The list of SVNSync tests will be added here.


git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/ra-replay-dev@857788 13f79535-47bb-0310-9956-ffa450edef68

--- a/Makefile.in
+++ b/Makefile.in
@@ -253,7 +253,8 @@ RUBY = @RUBY@
 ECHO_C = @ECHO_C@
 ECHO_N = @ECHO_N@
 
-TESTS = $(TEST_PROGRAMS) @BDB_TEST_PROGRAMS@
+# The list of test programs passed to run_tests.py.
+TESTS = $(SVN_TEST_PROGRAMS) @BDB_TEST_PROGRAMS@
 
 all: external-all local-all
 clean: external-clean local-clean
@@ -408,6 +409,9 @@ svnsshcheck:
 
 fsfscheck:
 	@$(MAKE) check FS_TYPE=fsfs
+
+svnsynccheck:
+	@$(MAKE) check TESTS=$(SVNSYNC_TEST_PROGRAMS)
 
 check-clean:
 	rm -rf subversion/tests/clients/cmdline/svn-test-work  \
