--- a/Makefile.in
+++ b/Makefile.in
@@ -361,7 +361,7 @@ check-javahl: javahl
 	$(JAVA) -Djava.library.path=@JAVAHL_OBJDIR@:$(libdir) -classpath $(javahl_tests_PATH):$(javahl_tests_CLASSPATH) org.tigris.subversion.javahl.tests.BasicTests
 
 # "make check CLEANUP=true" will clean up directories for successful tests.
-# "make check TESTS=subversion/tests/svn/basic_tests.py"
+# "make check TESTS=subversion/tests/cmdline/basic_tests.py"
 #  will perform only basic tests (likewise for other tests).
 check: $(TEST_DEPS) @BDB_TEST_DEPS@
 	@if test "$(PYTHON)" != "none"; then                                 \
@@ -384,22 +384,22 @@ check: $(TEST_DEPS) @BDB_TEST_DEPS@
 	fi;
 
 # First, set up Apache as documented in
-# subversion/tests/svn/README.
+# subversion/tests/cmdline/README.
 davcheck: 
 	@$(MAKE) check BASE_URL=http://localhost
 
 # Automatically configure and run Apache httpd on a random port, and then
 # run make check.
 davautocheck: 
-	@APXS=$(APXS) bash $(top_srcdir)/subversion/tests/svn/davautocheck.sh
+	@APXS=$(APXS) bash $(top_srcdir)/subversion/tests/cmdline/davautocheck.sh
 
 # First, run:
-#   subversion/svnserve/svnserve -d -r `pwd`/subversion/tests/svn
+#   subversion/svnserve/svnserve -d -r `pwd`/subversion/tests/cmdline
 svncheck: 
 	@$(MAKE) check BASE_URL=svn://localhost
 
 # First, run:
-#   subversion/svnserve/svnserve --listen-host "::1" -d -r `pwd`/subversion/tests/svn
+#   subversion/svnserve/svnserve --listen-host "::1" -d -r `pwd`/subversion/tests/cmdline
 
 svncheck6: 
 	@$(MAKE) check BASE_URL=svn://\[::1\]
@@ -408,13 +408,13 @@ svncheck6:
 # the path of the resulting shell.
 svnsshcheck:
 	@$(MAKE) check \
-	  BASE_URL=svn+ssh://localhost`pwd`/subversion/tests/svn
+	  BASE_URL=svn+ssh://localhost`pwd`/subversion/tests/cmdline
 
 fsfscheck:
 	@$(MAKE) check FS_TYPE=fsfs
 
 check-clean:
-	rm -rf subversion/tests/svn/svn-test-work              \
+	rm -rf subversion/tests/cmdline/svn-test-work              \
                subversion/tests/libsvn_fs/test-repo-*          \
                subversion/tests/libsvn_fs_base/test-repo-*     \
                subversion/tests/libsvn_ra_local/test-repo-*    \
