--- a/configure.in
+++ b/configure.in
@@ -104,7 +104,7 @@ localedir='${datadir}/locale'
 AC_SUBST(localedir)
 
 dnl For SVN_LOCALE_DIR, we have to expand it to something.  See SVN_BINDIR.
-if test "${datadir}" = '${prefix}/share' -a "${prefix}" = "NONE"; then
+if test "${datadir}" = '${prefix}/share' && test "${prefix}" = "NONE"; then
   exp_localedir='${ac_default_prefix}/share/locale'
 else
   exp_localedir=$localedir
@@ -612,7 +612,7 @@ AC_HELP_STRING([--enable-dso], [Turn on DSO loading of RA libraries]),
     fi
 ])
 
-if test "$enable_shared" = "no" -o "$enable_dso" != "yes"; then
+if test "$enable_shared" = "no" || test "$enable_dso" != "yes"; then
   ### We want ra_local first to handle the following scenario:
   ### user has neon and db3 in /usr/local, and db4 in
   ### /usr/local/BerkeleyDB.4.0.  If libsvn_ra_dav.la comes before 
