--- a/build.conf
+++ b/build.conf
@@ -83,6 +83,7 @@ test-scripts =
         subversion/tests/clients/cmdline/lock_tests.py
         subversion/tests/clients/cmdline/cat_tests.py
         subversion/tests/clients/cmdline/import_tests.py
+        subversion/tests/clients/cmdline/svnsync_tests.py
 
 bdb-test-scripts =
 
