Incremental configury refactoring.
* configure.in: Remove some redundancy in the BSDi make handling test.


git-svn-id: https://svn.apache.org/repos/asf/subversion/trunk@857880 13f79535-47bb-0310-9956-ffa450edef68

--- a/configure.in
+++ b/configure.in
@@ -717,18 +717,14 @@ dnl Pass some config data ----------------------------
 dnl
 dnl BSD/OS (BSDi) needs to use a different include syntax in the Makefiles
 dnl
+INCLUDE_OUTPUTS="include \$(top_srcdir)/build-outputs.mk"
 case "$host" in
-*bsdi*)
+  *bsdi*)
     # Check whether they've installed GNU make
-    if make --version > /dev/null 2>&1; then 
-	INCLUDE_OUTPUTS="include \$(top_srcdir)/build-outputs.mk"
-    else
-	# BSDi make
-	INCLUDE_OUTPUTS=".include \"\$(top_srcdir)/build-outputs.mk\""
+    if ! make --version > /dev/null 2>&1; then 
+      # BSDi make
+      INCLUDE_OUTPUTS=".include \"\$(top_srcdir)/build-outputs.mk\""
     fi
-    ;;
-*)
-    INCLUDE_OUTPUTS="include \$(top_srcdir)/build-outputs.mk"
     ;;
 esac
 AC_SUBST(INCLUDE_OUTPUTS)
