Add new svndiff1 diff encoding, along with support in all protocols for the new diff encoding, while also allowing the old encoding to still function in a way that is backwards compatible for all older clients. Add the ability to write this new encoding in the on-disk repository format , defaulting to on, and add support for creating repositories that do not use the new encoding, for people who need it.
* configure.in:  Require zlib unconditionally

* notes/svndiff: Add svndiff1 description

* subversion/libsvn_fs_base/reps-strings.c
  (svn_fs_base__rep_deltify): Use svn_txdelta_to_svndiff2.

* subversion/libsvn_fs_base/fs.c
  (base_create): Default to newer format version.
  If SVN_FS_CONFIG_FS_NO_SVNDIFF1 is set in the config opts,
  use older format.
  (check_format):  Support both format 1 and 2.

* subversion/libsvn_fs_base/fs.h
  (SVN_FS_BASE__FORMAT_NUMBER): Bump to 2
  (SVN_FS_BASE__MIN_SVNDIFF1_FORMAT): Set to 2.

* subversion/libsvn_fs_base/util/fs_skels.c
  (is_valid_rep_delta_chunk_skel): Version 1 is valid.

* subversion/svnadmin/main.c
  (svnadmin__no_svndiff1): Add option.
  (options): Add "no-svndiff1" option.
  (cmd_table): Add svnadmin_no__svndiff1 to create command.
  (struct svnadmin_opt_state): Add no_svndiff1
  (subcommand_create): Set SVN_FS_CONFIG_NO_SVNDIFF1 in the hash if
  approriate.
  (main): Set no_svndiff1 if requested.

* subversion/include/svn_error_codes.h: Add
  SVN_ERR_SVNDIFF_INVALID_COMPRESSED_DATA

* subversion/include/svn_fs.h: Add SVN_FS_CONFIG_NO_SVNDIFF1.

* subversion/include/svn_ra_svn.h: Add SVN_RA_SVN_CAP_SVNDIFF1.

* subversion/include/svn_delta.h: Add svn_txdelta_to_svndiff2.

* subversion/mod_dav_svn/dav_svn.h
  (struct dav_resource_private): Add svndiff_version

* subversion/mod_dav_svn/file_revs.c
  (struct file_rev_baton): Add svndiff_version
  (file_rev_handler): Use svndiff version set in baton.
  (dav_svn__file_revs_report): Get svndiff_version from private info.

* subversion/mod_dav_svn/update.c
  (update_ctx

--- a/configure.in
+++ b/configure.in
@@ -451,20 +451,12 @@ AC_HELP_STRING([--with-editor=PATH],
 
 ])
 
-AC_ARG_WITH(zlib,
-AC_HELP_STRING([--with-zlib], [enable zlib support]),
-[
-
-    if test "$withval" = "yes" ; then
-       AC_CHECK_HEADER(zlib.h, [
+AC_CHECK_HEADER(zlib.h, [
            AC_CHECK_LIB(z, inflate, [
                AC_DEFINE([SVN_HAVE_ZLIB], [1], [Is zlib support enabled?])
                LIBS="$LIBS -lz"
-           ])
+           ], [AC_MSG_ERROR([subversion requires zlib])])
        ])
-    fi
-
-])
     
 MOD_ACTIVATION="-a"
 AC_ARG_ENABLE(mod-activation,
