--- a/build.conf
+++ b/build.conf
@@ -45,6 +45,7 @@ private-built-includes =
         subversion/libsvn_wc/wc-metadata.h
         subversion/libsvn_wc/wc-queries.h
         subversion/libsvn_wc/wc-checks.h
+        subversion/libsvn_subr/internal_statements.h
         subversion/bindings/swig/proxy/swig_python_external_runtime.swg
         subversion/bindings/swig/proxy/swig_perl_external_runtime.swg
         subversion/bindings/swig/proxy/swig_ruby_external_runtime.swg
@@ -379,6 +380,12 @@ desription = Developer-only integrity checks for the WC database
 type = sql-header
 path = subversion/libsvn_wc
 sources = wc-checks.sql
+
+[subr_sqlite]
+description = Internal statements for SQLite interface
+type = sql-header
+path = subversion/libsvn_subr
+sources = internal_statements.sql
 
 
 # ----------------------------------------------------------------------------
