Add a build.conf and get svnrload to build
* build.conf
  (svnrdump): Add new section to build svnrdump.
  (__ALL__): Add svnrdump.
* subversion/svnrload
  (svn:ignore): Copy properties from svnrdump.
* subversion/svnrload/load_editor.c: Change the path to the load
  header.
* subversion/svnrload/parse_dumpstream.c
  Correct ident to match GNU style
  (main): Stub out the callbacks and use the default parser. Also wrap
  functions in SVN_INT_ERR appropriately for error handling.
* subversion/svnrload/svnrload.c
  (main): Stub out function completely in favor of the main in
  parse_dumpstream.c


git-svn-id: https://svn.apache.org/repos/asf/subversion/branches/svnrload@979011 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.conf
+++ b/build.conf
@@ -175,6 +175,13 @@ libs = libsvn_client libsvn_ra libsvn_delta libsvn_subr apr
 install = bin
 manpages = subversion/svnrdump/svnrdump.1
 
+[svnrload]
+description = Subversion remote repository loader
+type = exe
+path = subversion/svnrload
+libs = libsvn_client libsvn_ra libsvn_delta libsvn_subr apr
+install = bin
+
 # Support for GNOME Keyring
 [libsvn_auth_gnome_keyring]
 description = Subversion GNOME Keyring Library
@@ -1073,7 +1080,7 @@ libs = libsvn_fs_base libsvn_fs_fs
 [__ALL__]
 type = project
 path = build/win32
-libs = svn svnserve svnadmin svnlook svnversion svnrdump svndumpfilter
+libs = svn svnserve svnadmin svnlook svnversion svnrdump svnrload svndumpfilter
        mod_authz_svn mod_dav_svn svnsync
 
 [__ALL_TESTS__]
